--- a/src/css/ImageForm.css
+++ b/src/css/ImageForm.css
@@ -1,10 +1,12 @@
 .imageForm {
     display: flex;
-    padding: 6px 12px;
-    
+    padding: 6px 12px;  
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-width: 350px;
+    border-color: greenyellow;
+    
 }
 
 .imageForm label {
@@ -15,6 +17,8 @@
     border: 1px solid #ccc;
     padding: 10px;
     font-size: medium;
+    /* border-color: red;   */
+    min-width: 200px;
 }
 
 .imageForm img {
