--- a/src/css/NavMenu.css
+++ b/src/css/NavMenu.css
@@ -9,7 +9,7 @@
     /* background-color: #36304a; */
     /* background: linear-gradient(45deg, #334dcf, #c850c0); */
     /* background: linear-gradient(45deg, #2a46d4, #c850c0); */
-    background: linear-gradient(45deg, #2a46d4 70%,#c850c0 100%);
+    background: linear-gradient(45deg, #100e17 75%,#ff5f0b 90%, #ff2550 100%);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -39,7 +39,7 @@
 }
 
 .nav_li a:hover:not(.active) {
-    background-color: #111;
+    background-color: #211c2c;
     border-bottom-color: #E21E31;
     border-bottom-style: solid;
     /*background-color: #E21E31;*/
